<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tribes Ascend Stats</string>
    <string name="action_settings">Refresh</string>
    <string name="title_section1">Base Stats</string>
    <string name="title_section2">Match Averages</string>
    <string name="title_section3">Kill Stats</string>
    <string name="title_section4">Time Stats</string>
    <string name="title_section5">Game Mode Stats</string>
    <string name="title_activity_match_details">MatchDetails</string>
    <string name="name" translatable="false" />
    <string name="Submit">Submit</string>
    <string name="search">Search for a player</string>
    <string name="back">Tribes background</string>
    <string name="mapName">Map Name</string>
    <string name="MapPlayTime">Map Play Time</string>
    <string name="Kills">Kills</string>
    <string name="KD">K:D</string>
    <string name="Deaths">Deaths</string>
    <string name="Assists">Assists</string>
    <string name="TimePlayed">Time Played</string>
    <string name="mapNameDisc">Map Name</string>
    <string name="classPic">Class</string>
    <string name="score">Score</string>
    <string name="classs">"Class: "</string>
    <string name="dmg">"    Dmg: "</string>
    <string name="kills">"    K: "</string>
    <string name="time">"    Time: "</string>
    <string name="title_activity_time_details">TimeDetails</string>
    <string name="imgForViewClass">image for viewd class</string>
    <string name="no_internet_access">No internet access</string>
    <string name="downloading_data">Downloading data&#8230;</string>
    <string name="invalid_player_name">Invalid player name</string>
    <string name="no_matches">No matches</string>
    <string name="internet_error"> An error occurred, check internet connection</string>
    <string name="user_">User:</string>
    <string name="match_removed">The match has been removed</string>
    <string name="user_not_found">User not found</string>
    <string name="class_usage_format">%s class usage</string>
    <string name="minutes_short_format">%s mins</string>
    <string name="pathfinder">Pathfinder</string>
    <string name="sentinel">Sentinel</string>
    <string name="infiltrator">Infiltrator</string>
    <string name="soldier">Soldier</string>
    <string name="raider">Raider</string>
    <string name="technician">Technician</string>
    <string name="juggernaut">Juggernaut</string>
    <string name="brute">Brute</string>
    <string name="doombringer">Doombringer</string>
    <string name="player_title_format">Stats for %s</string>
    <string name="n_pathfinder">Pathfinder (Naked)</string>
    <string name="key_name">Name</string>
    <string name="key_playerRank">Rank</string>
    <string name="key_last_online">Last Online</string>
    <string name="key_level">Level</string>
    <string name="key_user_created">User created</string>
    <string name="key_matches_completed">Matches completed</string>
    <string name="key_kills">Kills</string>
    <string name="key_deaths">Deaths</string>
    <string name="key_assists">Assists</string>
    <string name="key_kill_death_ratio">Kill/death ratio</string>
    <string name="key_ski_distance">Ski distance</string>
    <string name="key_top_speed">Top speed</string>
    <string name="key_belt_kills">Belt kills</string>
    <string name="key_midairs">Midairs</string>
    <string name="key_melee_kills">Melee kills</string>
    <string name="key_multi_kills">Multi-kill</string>
    <string name="key_sprees">Sprees</string>
    <string name="key_call_ins">Call-ins made</string>
    <string name="key_call_in_kills">Call-in kills</string>
    <string name="key_full_regenerations">Full regenerations</string>
    <string name="key_flag_caps">Flags caps</string>
    <string name="key_flag_returns">Flag returns</string>
    <string name="key_headshots">Headshots</string>
    <string name="key_high_speed_grabs">High speed grabs</string>
    <string name="key_generators_destroyed">Generators destroyed</string>
    <string name="key_base_assets_destroyed">Base Assests Destroyed</string>
    <string name="key_base_repairs">Base repairs</string>
    <string name="key_roadkills">Roadkills</string>
    <string name="key_vehicles_destroyed">Vehicles destroyed</string>
    <string name="key_base_upgrades">Base upgrades</string>
    <string name="key_vehicle_kills">Vehicle kills</string>
    <string name="user_format">User: %s</string>
    <string name="match_details_format">Details of match %s</string>
    <string name="delete_search_history">Delete search history</string>
    <string name="time_toast_format">%1$s: %2$s</string>
    <string name="key_stats_updated">Stats Updated</string>

    <string name="key_arena">Arena</string>
    <string name="key_cah">CAH</string>
    <string name="key_ctf">CTF</string>
    <string name="key_ctfblitz">CTF Blitz</string>
    <string name="key_rabbit">Rabbit</string>
    <string name="key_tdm">TDM</string>
    <string name="credit">Stats provided by <font color="#3399ff">wilderzone.org</font></string>
</resources>
