<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/search"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <AutoCompleteTextView
        android:id="@+id/inputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:completionThreshold="1"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:selectAllOnFocus="true"
        android:singleLine="true">

        <requestFocus />
    </AutoCompleteTextView>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="goToPlayer"
        android:text="@string/Submit" />

    <ImageView
        android:id="@+id/timageTimeDetails"
        android:layout_width="329dp"
        android:layout_height="274dp"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/back"
        android:cropToPadding="false"
        android:src="@drawable/attachment" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/credit"
        android:textAppearance="@android:style/TextAppearance.Large" />
</LinearLayout>
